# GroundingDINO

./: .gitignore  Dockerfile  LICENSE  README.md  build.py  docker_test.py  environment.yaml  pyproject.toml  requirements-export.txt  requirements.txt  setup.py  test.ipynb
.github/workflows/: python-ci.yml
demo/: create_coco_dataset.py  export_model.py  gradio_app.py  groundingDINO_batched_float16.ipynb  image_editing_with_groundingdino_gligen.ipynb  image_editing_with_groundingdino_stablediffusion.ipynb  inference_on_a_image.py  test_ap_on_coco.py
export_onnx/: README.md  common.py  convert_tensorrt.py  export_model.py  nx-run2.sh  onnx_infer.py  tensorrt_infer.py
groundingdino/config/: GroundingDINO_SwinT_OGC.py  GroundingDINO_SwinT_OGC_export.py
groundingdino/datasets/: cocogrounding_eval.py
groundingdino/models/: __init__.py  registry.py
groundingdino/models/GroundingDINO/: __init__.py  bertwarper.py  fuse_modules.py  groundingdino.py  ms_deform_attn.py  transformer.py  transformer_vanilla.py  utils.py
groundingdino/models/GroundingDINO/backbone/: backbone.py  position_encoding.py  swin_transformer.py
groundingdino/util/: export_flag.py  get_tokenlizer.py  inference.py  utils.py
